# Vauldy-Desktop

./: .gitignore  CHANGELOG.md  README.md  build.ps1  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
doc/: 桌面端需求规格书.md
scripts/: download-mpv.ps1  run-tauri.mjs
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: embed_window.rs  lib.rs  main.rs  mpv.rs  mpv_ipc.rs
src/api/: client.ts  types.ts
src/components/: AppShell.tsx  DesktopPlayerSettings.tsx  EmptyState.tsx  LibraryCard.css  LibraryCard.tsx  LoadingState.tsx  MediaCard.css  MediaCard.tsx  MusicBar.tsx  PlayerIcons.tsx  VideoControlBar.css  VideoControlBar.tsx
src/hooks/: useMpv.ts  useWebHls.ts
src/i18n/: AntdLocaleProvider.tsx  en.json  index.ts  zh-CN.json
src/i18n/__tests__/: i18n.test.ts
src/i18n/locales/: en.json  ja.json  ko.json  zh-CN.json  zh-TW.json
src/lib/: clientCaps.ts  errors.ts  imageUrl.ts  library.ts  mediaUrl.ts  playbackStrategy.ts  playerPrefs.ts  subtitleAppearance.ts
src/pages/: AlbumDetailPage.tsx  ArtistDetailPage.tsx  BrowsePage.tsx  FavoritesPage.tsx  GenreDetailPage.tsx  HomePage.tsx  LibraryPage.tsx  LoginPage.tsx  MediaDetailPage.css  MediaDetailPage.tsx  PhotoPage.tsx  PlaybackHistoryPage.tsx  PlayerPage.tsx  PlaylistsPage.tsx  ReaderPage.tsx  SearchPage.tsx  SeriesDetailPage.tsx  SettingsPage.tsx  SetupPage.tsx
src/store/: auth.ts  branding.ts  config.ts  player.ts
src/styles/: index.css  web-shell.css
